# Rover

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh
.cache/clangd/index/: SDL.c.D8DD95F1EAEBEE57.idx  SDL.h.DD604C1C13E23FAA.idx  SDL_RLEaccel.c.E35693EE32E7F1C8.idx  SDL_RLEaccel_c.h.160659A57C5CEB63.idx  SDL_alsa_audio.c.DEE7F5D582E9A517.idx  SDL_alsa_audio.h.A34458CC0AA8276E.idx  SDL_appid.c.7AA53C634A0F3EF3.idx  SDL_appid.h.2D66FB1D6DDD3C2C.idx  SDL_assert.c.1A1AC2434C2C97D0.idx  SDL_assert.h.E237805B2B467294.idx  SDL_assert_c.h.BEFF06810E1D6AB7.idx  SDL_asyncio.c.0FA1F74C04B39190.idx  SDL_asyncio.h.2300BADF2E1D2DDB.idx  SDL_asyncio_c.h.1FC5C401091173C4.idx  SDL_asyncio_generic.c.8DEA98DE76226335.idx  SDL_atomic.c.4B80BA4AD85A4DA7.idx  SDL_atomic.h.C4DA8E1024ED5F74.idx  SDL_audio.c.E82940D125AE958F.idx  SDL_audio.h.CE26E42030AECA3D.idx  SDL_audio_c.h.B6F4E1390A4460B4.idx  SDL_audio_channel_converters.h.60CAA68550795CC0.idx  SDL_audiocvt.c.2025494002892537.idx  SDL_audiodev.c.72FAE75042DDF011.idx  SDL_audioqueue.c.1F597F3C9ACE0FDB.idx  SDL_audioqueue.h.C1F9412BF762F4F7.idx  SDL_audioresample.c.47BF1175D8F2865A.idx  SDL_audioresample.h.05F586D59EC0BE0A.idx  SDL_audiotypecvt.c.D84BBF9106F9B7A7.idx  SDL_begin_code.h.78646878E391AD6D.idx  SDL_bits.h.6024E45AA4E49CF3.idx  SDL_blendfillrect.c.ED243D860884A6E5.idx  SDL_blendfillrect.h.C00FA05D3EA98485.idx  SDL_blendline.c.EBAC31B5BBB8F195.idx  SDL_blendline.h.65BFB5F2609ED4F6.idx  SDL_blendmode.h.C1E7A2AA45F1A196.idx  SDL_blendpoint.c.2BE928AD2FB84C19.idx  SDL_blendpoint.h.27E015ECADC99CC5.idx  SDL_blit.c.256073B94D904FD2.idx  SDL_blit.h.6B7B199F9AED7077.idx  SDL_blit_0.c.616A38A51EFE0E25.idx  (+727 more)
.cursor/plans/: rover_engine_roadmap_b2ddd478.plan.md
core/: CMakeLists.txt  typedefs.h
core/error/: error_list.cpp  error_list.h
core/memory/: memory.cpp  memory.h
core/string/: string_name.cpp  string_name.h
main/: CMakeLists.txt
misc/cmake/: RoverCompiler.cmake  RoverOptions.cmake  RoverUtils.cmake  RoverVersion.h.in
misc/scripts/: build.py
platform/: CMakeLists.txt
scene/: CMakeLists.txt
servers/: CMakeLists.txt
tests/: CMakeLists.txt
